test/good/generics/implicit02.px

func f(a) def
    return a[0]

print f("abc")
print f([true])
