test/bad/functions/return1.px

func f() Int def
    return true

func main() Int def
    return 0
